# OpenCV-SandBox

./: README.md
DelaunayTriangulation/: delaunaytriangulation.cpp
HughCircle/: HughCircle.sln  HughCircle.vcxproj  main.cpp
ImageAlignment/: image_alignment.cpp
OpenCV_Augmented/: OpenCV_Augmented.sln  OpenCV_Augmented.vcxproj
Qt_JsonCamera/: CMakeLists.txt  camera_settings.json  drawfacelandmarks.h  jsonCamerasettings.cpp  jsonCamerasettings.h  jsonfile.cpp  jsonserializable.h  jsonsfile.h  keyboardfilter.cpp  keyboardfilter.h  landmarkdetection.cpp  main.cpp  readme.txt  showvideocapture.cpp  showvideocapture.h  showvideocapture.ui  videoprocessorthread.cpp  videoprocessorthread.h
